--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,16 @@ baseurl: /sagamore
 
 #permalink
 permalink:   /:categories/:title/
+
+prose:
+  rooturl: ''
+  siteurl: 'http://fayne-mobilenow.github.io/sagamore/'
+  relativeLinks: 'http://prose.github.io/starter/links.jsonp'
+  media: 'images'
+  ignore:
+    - /_layouts
+    - /_sass
+    - /_includes
+    - /css
+    - /js
+    - /.gitignore
