--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,10 @@ prose:
     - /.gitignore
     - /about.md
     - feed.xml
+    
   metadata:
     _team:
-      - name: "name"
+      - name: "title"
         field:
           element: "text"
           label: "title"
