--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,12 @@ baseurl: /sagamore
 permalink:   /:categories/:title/
 
 prose:
+  metadata:
+  	_direct_investments:
+   		- name: "subtitle"
+    		field:
+        	element: "text"
+        	label: "subtitle"
   rooturl: ''
   siteurl: 'http://fayne-mobilenow.github.io/sagamore/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
@@ -48,9 +54,3 @@ prose:
     - feed.xml
     - package.json
     - Gruntfile.js  
-  metadata:
-  	_direct_investments:
-   		- name: "subtitle"
-    		field:
-        	element: "text"
-        	label: "title"
