--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ prose:
     		field:
         	element: "text"
         	label: "subtitle"
-  rooturl: ''
+  rooturl: '_direct_investments'
   siteurl: 'http://fayne-mobilenow.github.io/sagamore/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
   media: 'images'
