--- a/_config.yml
+++ b/_config.yml
@@ -77,18 +77,9 @@ prose:
         field:
           element: "text"
           label: "Title"
-      - name: "subtitle"
-        field:
-          element: "text"
-          label: "Subtitle"
-          placeholder: "This is a subtitle"
       - name: "description"
         field:
           element: "text"
-          label: "Logo Image"
-          placeholder: "Input the image URL"
-       - name: "sort"
-        field:
-          element: "text"
-          label: "Sort"
+          label: "Description"
+          placeholder: "This is the description field"
  
