--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ prose:
           placeholder: "Input the link"
       - name: "description"
         field:
-          element: "textarea"
+          element: "text"
           label: "Full description"
           placeholder: "This is the description field"
       - name: "effect"
